// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component - layout should render 1`] = `
<main
  className="measure center sans-serif ph2 "
/>
`;

exports[`component - layout should render with props 1`] = `
<main
  className="measure center sans-serif ph2 "
>
  <b>
    #content
  </b>
</main>
`;
